Prompts and swagger docs fix
